sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple expression
	while (!plusPetit(getNombreValeurs()-2,getNombreValeurs()-1,)){
                                                                    ^AlgBubbleSort1:10: error: ')' expected but '}' found.
}
^